completed fixed header w z-index & padding on body elements

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   align-content: center;
+  padding-top: 77.141px;
 }
 
 .about {
