--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -20,6 +20,7 @@
   "worktogether"
   "formitems";
   color: #B6B6B6;
+  padding-top: 77.141px;
 }
 
 
