--- a/src/styles/indexBody.module.css
+++ b/src/styles/indexBody.module.css
@@ -71,7 +71,7 @@ img {
   align-items: center;
   justify-content: center;
   align-content: center;
-  /* margin-top: -1.5rem; */
+  padding-top: 77.141px;
 }
 
 p {
