--- a/src/styles/portfolio.module.css
+++ b/src/styles/portfolio.module.css
@@ -33,6 +33,7 @@ a {
   align-items: center;
   justify-content: center;
   align-content: center;
+  padding-top: 77.141px;
 }
 
 .propertyVault {
