--- a/src/styles/propertyvault.module.css
+++ b/src/styles/propertyvault.module.css
@@ -411,6 +411,7 @@
   align-items: center;
   justify-content: center;
   align-content: center;
+  padding-top: 77.141px;
 }
 
 .prototypesContainer {
